# nutrish-sense

./: README.md  firebase.json  firestore.rules  policy.yaml  pubspec.yaml  test_adk_client.py  test_adk_client_call.py  test_adk_multimodal.py  test_cloud_function.py  test_live_engine.py  test_v2_engine.py
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/photo_upload_app/: MainActivity.kt
backend/: .env  README.md  agent_id.txt  diagnostic_test.py  pyproject.toml  result_output.txt  test_adk_cache.py  test_adk_runner.py  test_adk_schema.py  test_raw_gemini.py
backend/agent/: agent.py  agent_id.txt  deploy.py
backend/deployment/: deploy.py  dietary_agent-0.1.0-py3-none-any.whl
backend/dietary_agent/: agent.py  prompt.txt
backend/dietary_agent/sub_agents/: chronic_agent.py  clinical_agent.py  logic_engine.py  vision_agent.py
functions/: .env  main.py  requirements.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/widgets/: ai_result_dialog.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
